--- a/package.json
+++ b/package.json
@@ -21,4 +21,9 @@
     "url": "https://github.com/farradila/apprestapi/issues"
   },
   "homepage": "https://github.com/farradila/apprestapi#readme"
+  "dependencies": {
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
+    "mysql": "^2.18.1"
+  }
 }
